nodemon fix ,blueprintexampe fix
